[tool.poetry]
name = "trestle"
version = "0.1.0"
description = "A modern Python and Tornado based jumping off point for building web apps with Vue or Svelte."

license = "MIT"

authors = ["Brendan Doms <b@bdoms.com>"]

readme = "readme.md"

repository = "https://github.com/bdoms/trestle"
homepage = "https://github.com/bdoms/trestle"

[tool.poetry.dependencies]
python = "^3.7"
gae_validators = "1.0.3"
htmlmin = "0.1.12"
httpagentparser = "1.9.0"
peewee = "3.13.1"
psycopg2 = "2.8.4"
# uncomment to enable memcache support:
# python-memcached = "1.59"
sendgrid = "6.2.0"
tornado = "6.0.4"

[tool.poetry.dev-dependencies]
flake8 = "3.7.9"
flake8-print = "3.1.4"
