[tool.poetry]
name = "trestle"
version = "0.1.5"
description = "A modern Python and Tornado based jumping off point for building web apps with Vue or Svelte."

license = "MIT"

authors = ["Brendan Doms <b@bdoms.com>"]

readme = "readme.md"

repository = "https://github.com/bdoms/trestle"
homepage = "https://github.com/bdoms/trestle"

[tool.poetry.dependencies]
python = "^3.7"
gae_validators = "1.0.4"
htmlmin = "0.1.12"
httpagentparser = "1.9.0"
peewee = "3.13.3"
psycopg2 = "2.8.5"
# uncomment to enable memcache support:
# python-memcached = "1.59"
sendgrid = "6.4.3"
tornado = "6.0.4"

[tool.poetry.dev-dependencies]
flake8 = "3.8.3"
flake8-print = "3.1.4"
